# lua-ffi

./: CMakeLists.txt  SyncFork.sh  ffi.c
tests/: wintest.lua
